# PTDLL

./: .gitignore  README.md  pyproject.toml  run_train.py  train_multi_sac.py  train_runner.ps1
data/processed/: BTC_yf_features.csv  BTC_yf_signals.csv  aligned_prices_15_coins.csv
data/raw/: BNB_yf.csv  BTC_yf.csv  DASH_yf.csv  DCR_yf.csv  DOGE_yf.csv  ETC_yf.csv  ETH_yf.csv  LTC_yf.csv  NEO_yf.csv  USDT_yf.csv  WAVES_yf.csv  XLM_yf.csv  XMR_yf.csv  XRP_yf.csv  ZEC_yf.csv
docs/: features.md  overview.md  results.md  rl-metrics.md  stop-loss.md  tasks.md  workflow.md
models/v1/portfolio/: ppo.pt  sac_best_variant.pt  (+3 more)
scripts/: check_histories.py  check_history.py  check_results.py  clean_histories.py  ensemble_agent.py  eval_best.py  finalize_models.py  optimize_all.py  optimize_all_ensemble.py  perturb_ppo_td3.py  report.bat  resume.bat  test_ensemble.py  train-parallel.bat  train-seq.bat  train.bat  train_all_seeds.py  train_iterate.py  train_loop.py  transfer_v2.py  update_history.py  verify_best.py  verify_final.py  verify_models.py  weight_perturb.py
src/: config.py  gen_report.py  log.py  main.py  report.py  scores.py  utils.py
src/dataset/: fetch.py
src/lib/: features.py  metrics.py  plot.py  utils.py
src/models/: __init__.py  base.py  env.py  evaluation.py  ppo.py  predict.py  sac.py  td3.py  train.py
src/portfolio/: base.py  env.py  evaluate.py  ppo.py  sac.py  td3.py  train.py
src/risk/: base.py  evaluate.py  predict.py  report.py  train.py
src/scripts/: report.py  train_parallel.py  visualize.py
tests/: test_indicators.py  test_rl.py
(+12 files in other folders)
