[project]
name = "ptdll"
version = "0.1.0"
description = "Crypto trading bot and portfolio optimization research pipeline"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scikit-learn>=1.3",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "joblib>=1.3",
  "skl2onnx>=1.17",
  "onnx>=1.16",
  "onnxruntime>=1.18",
  "torch>=2.3",
  "onnxscript>=0.7.0",
  "yfinance>=1.4.1",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
